--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>com.westbrain</groupId>
     <artifactId>spring-rest-sandbox</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
 
     <properties>
         <spring.boot.version>1.2.1.RELEASE</spring.boot.version>
@@ -16,6 +15,14 @@
         <swagger.version>1.3.10</swagger.version>
         <swagger-ui-version>2.0.24</swagger-ui-version>
     </properties>
+
+    <repositories>
+        <repository>
+          <id>jcenter-release</id>
+          <name>jcenter</name>
+          <url>http://oss.jfrog.org/artifactory/oss-release-local/</url>
+        </repository>
+    </repositories>
 
     <dependencyManagement>
         <dependencies>
@@ -70,6 +77,11 @@
             <groupId>com.wordnik</groupId>
             <artifactId>swagger-core_2.11</artifactId>
             <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mangofactory</groupId>
+            <artifactId>swagger-springmvc</artifactId>
+            <version>0.9.5</version>
         </dependency>
     </dependencies>
 
